# LeakyHammer_UserSys

./: .dockerignore  .tmux.conf  AGENTS.md  BASELINE_ANALYSIS.md  Dockerfile  README.md  RECEIVER_DRIFT_FIX.md  ae_install_requirements.sh  container_setup.sh  main.py  native_setup.sh  pyproject.toml  requirements.txt  start_tmux.sh
gem5/: .gitignore  compile_attack_scripts.sh  get_all_results_local.sh  plot_figures.sh  plot_figures_container.sh  rebuild.sh  run.sh  run_dream_only.sh  run_parallel_local.sh  run_parallel_local_container.sh  run_parallel_slurm.sh  run_parallel_slurm_container.sh  run_recommended_subset.sh  run_srs_only.sh  run_subset.sh
gem5/attack-scripts/: dream-poc-receiver.cc  dream-poc-sender.cc  prac-poc-receiver.cc  prac-poc-sender.cc  rfm-poc-receiver.cc  rfm-poc-sender.cc  rowhammer-addr.hh  rowhammer-dream-receiver.cc  rowhammer-dream-sender.cc  rowhammer-mr-latency.cc  rowhammer-mr-noise.cc  rowhammer-prac-receiver.cc  rowhammer-prac-sender.cc  rowhammer-rfm-receiver.cc  rowhammer-rfm-sender.cc  rowhammer-side.cc  rowhammer-side.hh  rowhammer-srs-receiver.cc  rowhammer-srs-sender.cc  srs-poc-receiver.cc  srs-poc-sender.cc
gem5/compile-scripts/: recompile-dream-poc.sh  recompile-mr-latency.sh  recompile-prac-poc.sh  recompile-rfm-poc.sh  recompile-srs-poc.sh  recompile_dream.sh  recompile_noise.sh  recompile_prac.sh  recompile_rfm.sh  recompile_srs.sh
gem5/plot-scripts/: figure2_plotter.py  figure3_plotter.py  figure4_plotter.py  figure6_dream_plotter.py  figure6_plotter.py  figure7_plotter.py  srs_poc_plotter.py
gem5/src/cpu/: BaseCPU.py
(+67 files in other folders)
