[project]
name = "leakyhammer-usersys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "matplotlib==3.1.2",
    "numpy==1.17.4",
    "pandas==1.3.4",
    "pyyaml>=6.0.3",
    "scipy==1.3.3",
    "scons==3.1.2",
    "seaborn==0.11.2",
    "wget==3.2",
]

[tool.uv]
environments = ["platform_machine == 'x86_64'"]
